# molepy

./: .gitmodules  LICENSE  NOTICE  README.md
molepy/basis/: avdz.py  avtz.py  bas.py  def2-svp.py  def2-svpd.py  def2-tzvp.py  def2-tzvpd.py  genbasis.py  readme.txt  sto3g.py  vdz.py  vtz.py
molepy/ccmints/: README.txt
molepy/ccmints/src/: CMakeLists.txt  CartSpher.cc  boys.cc  boys.h  kinetic.cc  os_hrr.cc  os_vrr.cc  os_vrr.h  overlap.cc  potential.cc
molepy/coord/: coord.py
molepy/example/: h2o-hf-vdz.inp  h2o-hf-vdz.py
molepy/lib/: input.py  mole_param.py  mout.py
molepy/pymints/: CartSpher.py  README.txt  boys.py  getints.py  kinetic.py  os_hrr.py  os_vrr.py  overlap.py  potential.py
molepy/scf/: DIIS.py  JK.py  orth.py  rhf.py
